# layer

./: Dockerfile  Makefile  sam.yml
.github/workflows/: deploy.yml
layers/base/: pyproject.toml
layers/feedparser/: pyproject.toml
layers/scraping/: pyproject.toml
