[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.28.50"
boto3-stubs = {version = "1.28.50", extras = ["dynamodb", "s3", "sqs"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
